@@ -1,3 +1,8 @@
+2009-01-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/38725
+	* g++.dg/ext/label11.C: New test.
+
 2009-01-07  Joseph Myers  <joseph@codesourcery.com>
 
 	* lib/target-supports.exp (check_weak_override_available): New.
