@@ -1,3 +1,9 @@
+2009-01-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/38725
+	* semantics.c (finish_goto_stmt): Convert destination to
+	void *.
+
 2009-01-06  Jason Merrill  <jason@redhat.com>
 
 	PR c++/35297
